--- a/index.html
+++ b/index.html
@@ -15,43 +15,39 @@
             <div class="tabcontent">
                 <img src="img/tabs/vegy.jpg" alt="vegy">
                 <div class="tabcontent__descr">
-                    Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
+                    "Fitness" menyusi - pishirishga yangi yondashuv: ko'proq yangi sabzavotlar va mevalar. Sportga qiziquvchilar uchun; faol va sog'lom. Bu eng yaxshi narx va yuqori sifatga ega yangi mahsulot!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/elite.jpg" alt="elite">
                 <div class="tabcontent__descr">
-                    Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!
+                    "Premium" menyusi - biz nafaqat chiroyli qadoqlash dizaynidan, balki idishlarning yuqori sifatli bajarilishidan ham foydalanamiz. Qizil baliq, dengiz mahsulotlari, mevalar - restoranga bormasdan restoran menyusi!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/post.jpg" alt="post">
                 <div class="tabcontent__descr">
-                    Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!
+                    Bizning maxsus "Lenten menyusi" ingredientlarni ehtiyotkorlik bilan tanlashga qaratilgan: hayvonot mahsulotlari yo'q. Har bir elementda o'zingiz va tabiat bilan to'liq uyg'unlik!
                 </div>
             </div>
             <div class="tabcontent">
                 <img src="img/tabs/vegy.jpg" alt="vegy">
                 <div class="tabcontent__descr">
-                    Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                    "Muvozanatli" menyu - bu sizning dietangizning barcha ilmiy tavsiyalarga muvofiqligi. Biz sizning c/w/w/y ga bo'lgan ehtiyojingizni diqqat bilan hisoblab chiqamiz va siz uchun eng yaxshi taomlarni yaratamiz.
                 </div>
             </div>
             <div class="tabheader">
-                <h3>Выберите стиль питания</h3>
+                <h3>Ovqatlanish uslubini tanlang</h3>
                 <div class="tabheader__items">
-                    <div class="tabheader__item tabheader__item_active">Фитнес</div>
-                    <div class="tabheader__item">Премиум</div>
-                    <div class="tabheader__item">Постное</div>
-                    <div class="tabheader__item">Сбалансированное</div>
+                    <div class="tabheader__item tabheader__item_active"> Fitnes</div>
+                    <div class="tabheader__item">Premium</div>
+                    <div class="tabheader__item">Ro'za</div>
+                    <div class="tabheader__item">Balanslangan</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
 <div class="divider"></div>
 <script src="js/script.js"></script>
 </body>
